--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-node_modules/
-config/config.env
+# Ignore Mac system files
+.DS_store
+
+# Ignore node_modules folder
+node_modules
+
+# Ignore all text files
+*.txt
+
+# Ignore files related to API keys
+.env
+**/config.env
+
+# Ignore SASS config files
+.sass-cache
